memodifikasi file baru pada app tech pen

--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@ let fonts = [{
                   <select class="form-control" id="font"
                     onchange="localStorage.setItem('fontIndex', this.value);setup()"></select>
                 </div>
+                <!-- /img/folio_bergaris.jpg -->
                 <div class="form-group col-md-6">
                   <label for="font">Pilih Buku:</label>
                   <select class="form-control" id="book"
@@ -386,8 +387,6 @@ let fonts = [{
   <script src="./assets/js/script.js"></script>
   <script src="./assets/js/custom.js"></script>
   <script src="./assets/app.js"></script> 
-
-
 </body>
 
 </html>
