--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
 
   <!-- ***** Header Area End ***** -->
   <!-- ***** Welcome Area Start ***** -->
-  <div class="welcome-area" id="welcome">
+  <div class="welcome-area warna" id="welcome">
 
     <!-- ***** Header Text Start ***** -->
     <div class="header-text">
       <div class="container">
-        <div class="row">
+        <div class="row tech-pena">
           <div class="left-text col-lg-6 col-md-6 col-sm-12 col-xs-12"
             data-scroll-reveal="enter left move 30px over 0.6s after 0.4s" data-scroll-reveal-id="1"
             data-scroll-reveal-initialized="true" data-scroll-reveal-complete="true">
-            <h1 class="text-muted">Tech Pen</h1>
+            <h1 class="text-muted">Tech Pena</h1>
             <p class="text-muted">Males mau nulis tangan? .
               Mending pakai Tech Pen.
               Tech Pen merupakan website nulis otomatis bagi kalian yg males nulis tangan dikertas</p>
@@ -82,7 +82,7 @@
   <div class="left-image-decor"></div>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
   <script>
-    let bg, font, margin, gap, fontsize = 14;
+    let bg, font, margin, gap, fontsize = 10;
     let txtDate = '',
       txtName = '',
       txtContent = '';
@@ -155,7 +155,7 @@ let fonts = [{
          // fix_dpi();
         background(bg);
         margin = 10.5;
-        fill(0, 0, 0, 700);
+        fill(0, 0, 0, 800);
         translate(margin - 8, margin * 3);
         text(txtName, 0, 0);
         text(txtDate, 210, 0);
@@ -306,6 +306,8 @@ let fonts = [{
                   </div>
                   <div class="col-lg-12">
                     <fieldset>
+        
+                    
                       <textarea name="message" rows="6" id="message" placeholder="Your Message" required=""
                         style="background-color: rgba(250,250,250,0.3);"></textarea>
                     </fieldset>
